Update 2. Create the Image Processing Node Script.md

--- a/2. Create the Image Processing Node Script.md
+++ b/2. Create the Image Processing Node Script.md
@@ -1,1 +1,144 @@
+# Create Image Processing Node 
+---
 
+### **Step 1: Create the Image Processing Node Script**
+
+1. **Navigate to Your Package Directory**:
+   - Move into the package directory where you'll create the script:
+
+   ```bash
+   cd ~/ros2_ws_test/src/image_processor_test
+   ```
+
+2. **Create a Python Script**:
+   - Inside the `image_processor_test` directory, create a new directory called `scripts` if it doesn’t exist, and then create a Python script named `image_publisher.py`:
+
+   ```bash
+   cd image_processor_test
+   mkdir scripts
+   cd scripts
+   touch image_publisher.py
+   ```
+
+3. **Write the Image Publishing Script**:
+   - Open the `image_publisher.py` file with your preferred text editor:
+
+   ```bash
+   gedit image_publisher.py
+   ```
+
+   - Add the following code to the script:
+
+   ```python
+   #!/usr/bin/env python3
+
+   import os
+   import time
+   import rclpy
+   from rclpy.node import Node
+   from sensor_msgs.msg import Image
+   from cv_bridge import CvBridge
+   import cv2
+
+   class ImagePublisher(Node):
+       def __init__(self):
+           super().__init__('image_publisher')
+           self.publisher_ = self.create_publisher(Image, 'image_topic', 10)
+           self.bridge = CvBridge()
+           self.image_dir = '/path/to/your/image_directory'  # Update with your directory
+           self.image_files = sorted(os.listdir(self.image_dir))  
+           self.current_index = 0
+           self.timer_period = 1.0  # seconds
+           self.timer = self.create_timer(self.timer_period, self.timer_callback)
+
+       def timer_callback(self):
+           if self.current_index < len(self.image_files):
+               image_path = os.path.join(self.image_dir, self.image_files[self.current_index])
+               cv_image = cv2.imread(image_path)
+               ros_image = self.bridge.cv2_to_imgmsg(cv_image, "bgr8")
+               self.publisher_.publish(ros_image)
+               self.get_logger().info(f'Publishing {self.image_files[self.current_index]}')
+               self.current_index += 1
+           else:
+               self.get_logger().info('All images processed.')
+               self.timer.cancel()
+
+   def main(args=None):
+       rclpy.init(args=args)
+       image_publisher = ImagePublisher()
+       rclpy.spin(image_publisher)
+       image_publisher.destroy_node()
+       rclpy.shutdown()
+
+   if __name__ == '__main__':
+       main()
+   ```
+
+   - Make sure to replace `'/path/to/your/image_directory'` with the actual path to your directory containing the images.
+
+4. **Make the Script Executable**:
+   - After saving the file, make it executable by running the following command:
+
+   ```bash
+   chmod +x image_publisher.py
+   ```
+
+### **Step 2: Update Package Files**
+
+1. **Update `setup.py`**:
+   - Open the `setup.py` file in the root of your package:
+  
+   ```bash
+   cd ~/ros2_ws_test/src/image_processor_test
+   gedit setup.py
+   ```
+
+   - Modify the `entry_points` section to include the new script:
+
+   ```python
+   entry_points={
+       'console_scripts': [
+           'image_publisher = image_processor_test.scripts.image_publisher:main',
+       ],
+   },
+   ```
+   - Also modify the `packages` field to the following:
+   ```bash
+   packages=[package_name, package_name + '.scripts'],
+   ```
+
+2. **Rebuild the Workspace**:
+   - Navigate back to the workspace root and rebuild:
+
+   ```bash
+   cd ~/ros2_ws_test
+   colcon build
+   ```
+
+3. **Source the Workspace**:
+   - Source the setup file to make sure the new script is available:
+
+   ```bash
+   source install/setup.bash
+   ```
+
+### **Step 3: Run the Node**
+
+1. **Run the Image Publisher Node**:
+   - Now, you can run the node to start publishing images from the directory:
+
+   ```bash
+   ros2 run image_processor_test image_publisher
+   ```
+
+   - You should see the node publishing images at the specified interval.
+
+- **Viewing the Images**:
+  - If you want to visualize the images being published, you could use a tool like `rqt_image_view`, which can subscribe to the image topic and display the images in real-time.
+
+Open a new terminal tab and run the following:
+    ```bash
+    ros2 run rqt_image_view rqt_image_view
+    ```
+
+    Select the topic your images are being published on (`/image_topic`, for example) to see the images.
