Update 3. Create Image Subscriber Node.md

--- a/3. Create Image Subscriber Node.md
+++ b/3. Create Image Subscriber Node.md
@@ -73,7 +73,11 @@
 
 5. **Update `setup.py`**:
    - Open the `setup.py` file and add the subscriber node to the `entry_points` section:
+  
    ```bash
+   cd ~/ros2_ws_test/src/image_processor_test
+   gedit setup.py
+   ```
    
    ```python
    entry_points={
@@ -115,4 +119,4 @@
    ```
 
 ## **Visualize the Output**:
-   - The subscriber node will receive images published by the publisher node and display them using OpenCV. You should see the images appear in a window as they are received.
+   - The subscriber node will receive images published by the publisher node and display them using OpenCV. You should see the images appear in a window as they are received. There might be a slight delay in the visualization due to processing time, however, considering this is simply a visualization tool this should not be an issue going forward.
