--- a/3. Create Image Subscriber Node.md
+++ b/3. Create Image Subscriber Node.md
@@ -41,15 +41,13 @@
                'image_topic',
                self.listener_callback,
                10)
-           self.subscription  # prevent unused variable warning
+           self.subscription  
            self.bridge = CvBridge()
 
        def listener_callback(self, msg):
            self.get_logger().info('Receiving image')
-           # Convert ROS Image message to OpenCV image
            cv_image = self.bridge.imgmsg_to_cv2(msg, "bgr8")
 
-           # Display the image using OpenCV (for visualization purposes)
            cv2.imshow("Received Image", cv_image)
            cv2.waitKey(1)
 
