Update 3. Create Image Subscriber Node.md

--- a/3. Create Image Subscriber Node.md
+++ b/3. Create Image Subscriber Node.md
@@ -1,4 +1,4 @@
-# Create a Subscriber Node**
+# Create a Subscriber Node
 ---
 1. **Navigate to Your Package Directory**:
    - Go to the directory where your package is located:
