--- a/General Setup/2. Create the Image Processing Node Script.md
+++ b/General Setup/2. Create the Image Processing Node Script.md
@@ -113,8 +113,23 @@
    cd ~/ros2_ws_test
    colcon build
    ```
+   **If you get a warning message** like the following:
+   ```bash
+   Starting >>> image_processor_test
+   --- stderr: image_processor_test                   
+   package init file 'image_processor_test/scripts/__init__.py' not found (or not a regular file)
+   ---
+   Finished <<< image_processor_test [0.54s]
 
-3. **Source the Workspace**:
+   Summary: 1 package finished [0.69s]
+   1 package had stderr output: image_processor_test
+   ```
+   then run the following few commands to add the `__init__.py` file into the scripts folder:
+   ```bash
+   touch ~/ros2_ws_test/src/image_processor_test/image_processor_test/scripts/__init__.py
+   ```
+  This should resolve the issue and you can run the `colcon build` command once more to complete the build of the package. 
+4. **Source the Workspace**:
    - Source the setup file to make sure the new script is available:
 
    ```bash
